tests && docs
