# docs/swagger.json
@@ -28,7 +28,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/auth_controller.signInInput"
+                            "$ref": "#/definitions/auth_controller.SignInInput"
                         }
                     }
                 ],
@@ -56,7 +56,7 @@
         }
     },
     "definitions": {
-        "auth_controller.signInInput": {
+        "auth_controller.SignInInput": {
             "type": "object",
             "required": [
                 "login",
